--- a/sass/blocks/_ablocks.scss
+++ b/sass/blocks/_ablocks.scss
@@ -1,2 +1,7 @@
 @import "header.scss";
 @import "info.scss";
+@import "discounts.scss";
+@import "sentences.scss";
+@import "location.scss";
+@import "articles.scss";
+@import "footer.scss";
