--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,13 @@ main {
 }
 
 .header {
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1000;
+  background: #FFF;
+  box-shadow: 2px 4px 8px 0px rgba(0, 0, 0, 0.1);
   padding: 16px 0;
 }
 .header__logo2 {
@@ -83,8 +90,11 @@ main {
   line-height: 150%;
   margin-left: 10px;
 }
+.header__list-formWrap {
+  max-width: 340px;
+}
 .header__list-form {
-  width: 340px;
+  width: 100%;
   padding: 0 8px;
   border-radius: 4px;
   border: 1px solid #70C05B;
@@ -141,11 +151,27 @@ main {
     display: none;
   }
 }
+@media only screen and (max-width: 678px) {
+  .header__list-item {
+    display: none;
+  }
+  .header__list2 {
+    display: none;
+  }
+  .header__list3 {
+    display: none;
+  }
+}
 .info {
-  width: 1440px;
-  margin: 0 auto;
+  max-width: 1440px;
+  width: 100%;
+  margin-top: 76px;
+  margin-left: auto;
+  margin-right: auto;
   background-image: url("../../images/Group7100.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .info__container {
   display: flex;
@@ -157,4 +183,457 @@ main {
   font-size: 48px;
   font-weight: 700;
   line-height: 150%;
+}
+
+@media only screen and (max-width: 1090px) {
+  .info__title {
+    font-size: 30px;
+  }
+}
+@media only screen and (max-width: 815px) {
+  .info {
+    height: 200px;
+  }
+  .info__container {
+    justify-content: center;
+  }
+  .info img {
+    display: none;
+  }
+  .info__title {
+    margin-top: 10%;
+  }
+}
+@media only screen and (max-width: 696px) {
+  .info {
+    height: 80px;
+  }
+  .info__title {
+    margin-top: 20px;
+    font-size: 18px;
+  }
+}
+.discounts {
+  padding-top: 80px;
+  background: #FBF8EC;
+}
+.discounts__info {
+  display: flex;
+  align-items: center;
+  padding-bottom: 40px;
+}
+.discounts__title {
+  color: #414141;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 150%;
+}
+.discounts__link {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: #606060;
+  line-height: 150%; /* 24px */
+}
+.discounts__cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-bottom: 120px;
+}
+.discounts__card {
+  position: relative;
+  background-color: #fff;
+  max-width: 280px;
+  border-radius: 4px;
+  box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.1);
+  padding: 8px;
+  margin-bottom: 16px;
+}
+.discounts__card-like {
+  position: absolute;
+  right: 3%;
+  top: 3%;
+}
+.discounts__card-discount {
+  position: absolute;
+  border-radius: 4px;
+  background: #F63;
+  color: #FFF;
+  line-height: 150%;
+  padding: 4px 8px;
+  top: 40%;
+  left: 3%;
+}
+.discounts__card-img {
+  margin-bottom: 8px;
+}
+.discounts__card-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.discounts__card-price {
+  color: #414141;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 150%;
+}
+.discounts__card--price {
+  color: #606060;
+  line-height: 150%;
+}
+.discounts__card-text {
+  color: #BFBFBF;
+  font-size: 12px;
+  line-height: 150%;
+  margin-bottom: 8px;
+}
+.discounts__card-subtitle {
+  color: #414141;
+  line-height: 150%;
+  margin-bottom: 8px;
+}
+.discounts__card-rating {
+  margin-bottom: 8px;
+}
+.discounts__card-btn {
+  background-color: #fff;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid #70C05B;
+  padding: 8px 0;
+  color: #70C05B;
+  line-height: 150%;
+  cursor: pointer;
+}
+.discounts__card-btn:hover {
+  background: #F63;
+  color: white;
+  border: 1px solid #f63;
+}
+
+@media only screen and (max-width: 1190px) {
+  .discounts__card:last-child {
+    display: none;
+  }
+}
+@media only screen and (max-width: 910px) {
+  .discounts__card {
+    max-width: 240px;
+  }
+  .discounts__card-img {
+    max-width: 200px;
+  }
+  .discounts__card-discount {
+    top: 30%;
+  }
+}
+@media only screen and (max-width: 520px) {
+  .discounts__cards {
+    justify-content: center;
+    gap: 20px;
+  }
+  .discounts__card {
+    max-width: 160px;
+  }
+  .discounts__card:last-child {
+    display: block;
+  }
+  .discounts__card-img {
+    max-width: 150px;
+    margin-bottom: 20px;
+  }
+}
+.sentences {
+  background: #FBF8EC;
+  padding-bottom: 120px;
+}
+.sentences__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.sentences__title {
+  color: #414141;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 40px;
+}
+.sentences__left {
+  max-width: 584px;
+  padding: 8px 30px;
+  border-radius: 4px;
+  background: #FCD5BA;
+  display: flex;
+  align-items: center;
+}
+.sentences__left:hover {
+  box-shadow: 0px 8px 16px 0px rgba(202, 147, 96, 0.5);
+}
+.sentences__left-title {
+  color: #414141;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 6px;
+}
+.sentences__left-text {
+  color: #414141;
+  line-height: 150%;
+}
+.sentences__right {
+  max-width: 584px;
+  padding: 8px 30px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  background: #E5FFDE;
+}
+.sentences__right:hover {
+  box-shadow: 0px 8px 16px 0px rgba(202, 147, 96, 0.5);
+}
+
+@media only screen and (max-width: 1061px) {
+  .sentences__left {
+    max-width: 350px;
+    padding: 20px;
+  }
+  .sentences__left-title {
+    font-size: 14px;
+    max-width: 174px;
+  }
+  .sentences__left-text {
+    font-size: 12px;
+  }
+  .sentences__left img {
+    max-width: 190px;
+  }
+  .sentences__right {
+    max-width: 350px;
+    padding: 20px;
+  }
+  .sentences__right img {
+    max-width: 190px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .sentences {
+    padding-bottom: 80px;
+  }
+  .sentences__wrapper {
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+}
+.location {
+  background: #FBF8EC;
+  padding-bottom: 120px;
+}
+.location__title {
+  color: #414141;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 40px;
+}
+.location__link {
+  border-radius: 4px;
+  background: #F3F2F1;
+  color: #606060;
+  font-size: 12px;
+  line-height: 150%;
+  padding: 4px 8px;
+  margin-bottom: 24px;
+}
+.location__link:hover {
+  background: #70C05B;
+  color: #fff;
+}
+.location__link-wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+.location__map {
+  max-width: 1210px;
+  width: 100%;
+}
+
+.articles {
+  background: #FBF8EC;
+  padding-bottom: 80px;
+}
+.articles__cards {
+  display: flex;
+  gap: 40px;
+}
+.articles__card {
+  margin-bottom: 20px;
+  max-width: 376px;
+  width: 100%;
+  background-color: white;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.articles__card:hover {
+  box-shadow: 4px 8px 16px 0px rgba(255, 102, 51, 0.2);
+}
+.articles__card-img {
+  margin-bottom: 10px;
+  width: 100%;
+}
+.articles__card-date {
+  margin-left: 10px;
+  color: #8F8F8F;
+  font-size: 12px;
+  line-height: 150%;
+}
+.articles__card-title {
+  color: #414141;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 150%;
+  margin: 0 10px;
+}
+.articles__card-text {
+  margin: 0 10px;
+  color: #414141;
+  line-height: 150%;
+}
+.articles__card-btn {
+  margin: 10px;
+  padding: 8px;
+  border-radius: 4px;
+  border: none;
+  background: #E5FFDE;
+  color: #70C05B;
+  line-height: 150%;
+}
+.articles__card-btn:hover {
+  color: #fff;
+  background: #70C05B;
+}
+
+@media only screen and (max-width: 768px) {
+  .articles__cards {
+    gap: 32px;
+  }
+  .articles__card {
+    max-width: 224px;
+  }
+  .articles__card-title {
+    font-size: 16px;
+  }
+  .articles__card-text {
+    font-size: 12px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .articles__cards {
+    flex-direction: column;
+    align-items: center;
+  }
+  .articles__card {
+    max-width: 336px;
+  }
+}
+.footer {
+  background-image: url("../../images/bg.png");
+  background-repeat: no-repeat;
+  background-color: antiquewhite;
+  background-size: cover;
+  margin: 0 auto;
+  max-width: 1440px;
+  width: 100%;
+  height: 126px;
+}
+.footer__social2 {
+  display: none;
+}
+.footer__nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer__list {
+  margin-top: 24px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.footer__list-item {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.footer__list-link {
+  color: #414141;
+  font-size: 12px;
+  line-height: 150%;
+}
+.footer__contacts {
+  margin-top: 24px;
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+.footer__contacts-social {
+  display: flex;
+  gap: 10px;
+}
+.footer__contacts-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.footer__contacts-tel {
+  display: flex;
+  color: #414141;
+  line-height: 150%;
+  align-items: center;
+}
+.footer__contacts-design {
+  display: flex;
+  color: #414141;
+  font-size: 12px;
+  line-height: 150%;
+}
+
+@media only screen and (max-width: 972px) {
+  .footer__contacts {
+    gap: 24px;
+  }
+  .footer__contacts-social {
+    flex-wrap: wrap;
+    gap: 5px;
+  }
+  .footer__contacts-tel {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 763px) {
+  .footer__contacts {
+    display: none;
+  }
+  .footer__social2 {
+    display: block;
+  }
+  .footer__list {
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+  }
+  .footer__list-item {
+    gap: 10px;
+  }
+  .footer__list-logo {
+    display: flex;
+    gap: 60px;
+  }
+  .footer__list-link {
+    line-height: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
