--- a/sass/blocks/_info.scss
+++ b/sass/blocks/_info.scss
@@ -1,8 +1,13 @@
 .info{
-    width: 1440px;
-    margin: 0 auto;
+    max-width: 1440px;
+    width: 100%;
+    margin-top: 76px;
+    margin-left: auto;
+    margin-right: auto;
     background-image: url("../../images/Group7100.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     &__container{
         display: flex;
         align-items: center;
@@ -13,5 +18,35 @@
         font-size: 48px;
         font-weight: 700;
         line-height: 150%;
+    }
+}
+@media only screen and (max-width:1090px){
+    .info{
+        &__title{
+            font-size: 30px;
+        }
+    }
+}
+@media only screen and (max-width:815px){
+    .info{
+        height: 200px;
+        &__container{
+            justify-content: center;
+        }
+        img{
+            display: none;
+        }
+        &__title{
+            margin-top: 10%;
+        }
+    }
+}
+@media only screen and (max-width:696px){
+    .info{
+        height: 80px;
+        &__title{
+            margin-top: 20px;
+            font-size: 18px;
+        }
     }
 }
